# German-Course-Scrapper-

./: .gitignore  README.md  main.py  pyproject.toml
